# notion-desktop

./: .gitignore  index.html  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/screens/: History.tsx  Meeting.tsx  Settings.tsx  Transcribe.tsx
