[package]
name = "notion-desktop"
version = "0.1.0"
description = "Notion Desktop — Audio Transcription App"
authors = []
edition = "2021"

[lib]
name = "notion_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
